# sensorhouse

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: changelog-writer.md
api/: db.py  main.py  requirements.txt
clickhouse/config/: users.xml
clickhouse/init/: 01_create_database.sql  02_create_sensors_table.sql  03_create_hourly_table.sql  04_create_hourly_mv.sql  05_load_sample.sql  06_create_kafka_table.sql  07_create_kafka_mv.sql  08_add_ttl.sql
docs/: MILESTONE_1.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  architecture.excalidraw  sensorhouse-architecture-v2.excalidraw  sensorhouse-architecture.excalidraw
grafana/provisioning/dashboards/: clickhouse-monitoring.json  dashboards.yml  geo_heatmap.json  hot_humid.json  overview.json  pm25.json
grafana/provisioning/datasources/: clickhouse.yml
kafka/producer/: Dockerfile  producer.py  requirements.txt
tests/: test_m1_infrastructure.sh  test_m2_schema.sh  test_m3_kafka.sh  test_m4_api.sh
