[project]
name = "sensorhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect==0.7.16",
    "excalidraw-architect-mcp==0.2.3",
    "fastapi==0.111.0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.29.0",
]

[dependency-groups]
dev = [
    "excalidraw-architect-mcp>=0.2.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
